# freee_audit

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  BACKLOG.md  PROJECT.md  README.md  eslint.config.mjs  middleware.ts  next-intl.config.ts  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm.approved-builds.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.github/: ai-project.yml
docs/: API_DESIGN.md  COMMIT_FAILURE_LESSONS.md  DATABASE_DESIGN.md  DEPLOYMENT.md  DESIGN.md  DEVELOPMENT.md  FEATURES.md  SECURITY.md  TEST_STRATEGY.md  quality-gate-report.md  roadmap.md
messages/: en.json  ja.json
ocr-server/: Dockerfile  main.py  requirements.txt
prisma/: schema.prisma  seed-currencies.ts  seed.ts
python-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
python-service/app/: config.py  main.py
python-service/app/models/: __init__.py  financial.py  requests.py
python-service/app/routers/: __init__.py  cashflow.py  kpi.py  statistics.py  validation.py
python-service/app/services/: __init__.py  accounting_standards.py  cashflow_calculator.py  kpi_calculator.py  statistical_analysis.py
python-service/app/utils/: __init__.py  precision.py  validators.py
python-service/tests/: test_cashflow.py  test_kpi.py  test_statistics.py
r-service/: .Rbuildignore  .Rprofile  .dockerignore  Dockerfile  README.md  plumber.R  run_tests.bat  setup.R  setup.bat  setup.ps1  start_service.bat  test_api.ps1  test_quick.R
sample_files/: 資本政策テンプレート.xlsx
tests/: setup.ts
(+1006 files in other folders)
