[project]
name = "financial-calculation-service"
version = "1.0.0"
description = "High-precision financial calculations using NumPy/Pandas/SciPy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "scipy.*",
    "statsmodels.*",
    "sklearn.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
